# Equation

./: CMakeLists.txt  README.md  config  interface.cpp  interface.h  main.cpp  test.txt
